--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,15 @@ html, body {
   height: 100%;
 }
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE/Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+
 .App {
   text-align: center;
 }
